Fix another batch of broken links

--- a/src/content/basics/enterprise-guide/additional-resources.mdx
+++ b/src/content/basics/enterprise-guide/additional-resources.mdx
@@ -14,15 +14,15 @@ In addition to the content in this guide, the following resources will be helpfu
 
 ## Apollo Client
 
-### Android
+### Kotlin/Android
 
-- [Apollo Client Android Docs](/android/)
-- [Tutorial - Apollo Android SDK](/android/tutorial/00-introduction/)
+- [Apollo Client Kotlin Docs](/kotlin/)
+- [Tutorial - Apollo Android SDK](/kotlin/tutorial/00-introduction/)
 
 ### iOS
 
 - [Apollo Client iOS Docs](/ios/)
-- [Tutorial - Apollo iOS SDK](/ios/tutorial/tutorial-introduction/)
+- [Tutorial - Apollo iOS SDK](/ios/get-started/)
 
 ### React/JS
 
@@ -42,13 +42,13 @@ In addition to the content in this guide, the following resources will be helpfu
 
 - [The Architecture of Federation (video)](https://www.youtube.com/watch?v=LKQKn1oFXJU)
 - [Migrating from Schema Stitching](/federation/migrating-from-stitching/)
-- [Third-party Libraries that Support Apollo Federation](/federation/other-servers/)
+- [Third-party Libraries that Support Apollo Federation](/federation/building-supergraphs/supported-subgraphs/)
 - [Apollo Workbench VS Code Extension](https://marketplace.visualstudio.com/items?itemName=apollographql.apollo-workbench)
 
 ## Apollo GraphOS
 
 - [Apollo GraphOS Docs](/graphos/)
 - [Managed Federation Overview](/federation/managed-federation/overview/)
-- [Sending Metrics to Apollo Studio](/graphos/setup-analytics/)
-- [Schema Checks](/graphos/schema-checks/)
+- [Sending Metrics to Apollo Studio](/graphos/metrics/usage-reporting/)
+- [Schema Checks](/graphos/delivery/schema-checks/)
 - [Rover CLI Docs](/rover/)
