--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -104,7 +104,7 @@ Older versions of the above libraries and tools don't fully support the required
 
 > **This step is required for Federation 1 supergraphs only.** If you have a Federation 2 supergraph, proceed to the next step.
 
-A contract uses one of your graph's existing [variants](/graphos/org/graphs/#variants) (called the **source variant**) to generate its contract schema. If your source variant uses Federation 1, you need to enable its support for the `@tag` directive in Apollo Studio.
+A contract uses one of your graph's existing [variants](/graphos/graphs/overview/#variants) (called the **source variant**) to generate its contract schema. If your source variant uses Federation 1, you need to enable its support for the `@tag` directive in Apollo Studio.
 
 Open the Settings page for the variant you want to use as your source variant, then select the **This Variant** tab:
 
@@ -183,7 +183,7 @@ Each `@tag` has a string `name`. You tag types and fields with the _same_ `name`
 
 For in-depth details on valid `@tag` usage, see [Rules for `@tag`s and contracts](#rules-for-tags-and-contracts).
 
-> Whenever Studio composes your source variant's [supergraph schema](/federation/#federated-schemas), that schema retains all of the `@tag`s from your subgraph schemas (this is different from most other directives, which are removed by default).
+> Whenever Studio composes your source variant's [supergraph schema](/federation/federated-types/overview), that schema retains all of the `@tag`s from your subgraph schemas (this is different from most other directives, which are removed by default).
 
 ### 4. Publish updated subgraph schemas
 
