--- a/src/content/technotes/TN0014-contracts-patterns.mdx
+++ b/src/content/technotes/TN0014-contracts-patterns.mdx
@@ -4,7 +4,7 @@ id: TN0014
 tags: [contracts, best practices]
 ---
 
-[Contracts](/graphos/contracts/) enable teams to contribute to a single unified graph while also delivering use-case-specific schemas to different types of consumers. Graph administrators define filter rules to generate **contract schemas** that are a strict subset of the source supergraph.
+[Contracts](/graphos/delivery/contracts/) enable teams to contribute to a single unified graph while also delivering use-case-specific schemas to different types of consumers. Graph administrators define filter rules to generate **contract schemas** that are a strict subset of the source supergraph.
 
 There are three different filtering strategies you can use for a contract:
 
