Modifications to self-hosted setup

--- a/src/content/graphos/graphs/overview.mdx
+++ b/src/content/graphos/graphs/overview.mdx
@@ -58,7 +58,7 @@ A federated supergraph consisting of:
 <tr>
 <td>
 
-[Self-hosted supergraph](#self-hosted-supergraphs)
+[Self-hosted supergraph](#self-hosted-supergraphs) (enterprise only)
 
 </td>
 <td>
@@ -68,7 +68,7 @@ A federated supergraph consisting of:
 * A router hosted in your infrastructure
 * One or more subgraphs hosted in your infrastructure
 
-Recommended for organizations that require full customization of their router, usually for advanced performance or data compliance reasons.
+Recommended for enterprise organizations that require full customization of their router, usually for advanced performance or data compliance reasons.
 
 </td>
 </tr>
@@ -137,7 +137,7 @@ Even if your API currently uses only _one_ GraphQL server, a cloud supergraph he
 
 ### Self-hosted supergraphs
 
-> If you need to host your supergraph's router in your own infrastructure, you might also benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/). Please [contact us](https://www.apollographql.com/contact-sales/).
+> ⚠️ **Self-hosted supergraphs are a feature of Enterprise plans.** If you need to host your supergraph's router in your own infrastructure, please [contact us](https://www.apollographql.com/contact-sales/).
 
 With a self-hosted supergraph, GraphOS does _not_ provision a router for your supergraph. Instead, you host your supergraph's router in your own infrastructure:
 
