--- a/src/content/graphos/routing/self-hosted.mdx
+++ b/src/content/graphos/routing/self-hosted.mdx
@@ -3,7 +3,7 @@ title: Self-hosted routing in GraphOS
 description: Host your supergraph's router in your own infrastructure
 ---
 
-> ⚠️ **Important:** If you're just getting started with GraphOS, instead [create a cloud supergraph](./cloud/).
+> ⚠️ **Important:** If you're just getting started with GraphOS, instead [create a cloud supergraph](../quickstart/cloud/).
 >
 > Self-hosted supergraphs are an enterprise-only feature for organizations with advanced performance or compliance requirements.
 >
