--- a/src/content/graphos/org/organizations.mdx
+++ b/src/content/graphos/org/organizations.mdx
@@ -2,7 +2,7 @@
 title: Organizations in Apollo Studio
 ---
 
-All data in Apollo Studio (graphs, schemas, metrics, etc.) is associated with a particular **organization**. Every organization has one or more [members](./members/) who manage it and can access its associated data.
+All data in GraphOS (graphs, schemas, metrics, etc.) is associated with a particular **organization**. Every organization has one or more [members](./members/) who manage it and can access its associated data.
 
 > Enterprise organizations have access to fine-grained access controls via additional [member roles](./members/#organization-wide-member-roles).
 
@@ -10,7 +10,7 @@ All data in Apollo Studio (graphs, schemas, metrics, etc.) is associated with a 
 
 You create your first organization as part of the [account creation process](../quickstart/cloud/), unless you've been invited to an existing organization by another Apollo user.
 
-You can create additional organizations by clicking **Create a new organization** at the bottom of your organization dropdown in [Studio](https://studio.apollographql.com):
+You can create additional organizations by clicking **Create a new organization** at the bottom of your organization dropdown in [Apollo Studio](https://studio.apollographql.com):
 
 <img
   src="../img/organization-list.jpg"
@@ -19,11 +19,11 @@ You can create additional organizations by clicking **Create a new organization*
   width="300"
 />
 
-A single Studio organization can include any number of [graphs](../graphs/overview/), so a single company rarely needs more than one or two organizations.
+A single organization can include any number of [graphs](../graphs/overview/), so a single company rarely needs more than one or two organizations.
 
 ## Viewing your organizations
 
-Click the organization dropdown at the top of the page in [Studio](https://studio.apollographql.com) to view the list of all organizations you belong to:
+Click the organization dropdown at the top of the page in [Apollo Studio](https://studio.apollographql.com) to view the list of all organizations you belong to:
 
 <img
   src="../img/organization-list.jpg"
@@ -39,7 +39,7 @@ Click the organization dropdown at the top of the page in [Studio](https://studi
 
 > ⚠️ **This action can't be undone!**
 
-You can delete an organization at any time. Doing so removes all traces of the organization from Studio.
+You can delete an organization at any time. Doing so removes all traces of the organization from GraphOS.
 
 Deleting your organization does all of the following:
 
