--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -1,6 +1,6 @@
 ---
 title: Schema checks
-description: Verify the safety of changes to your graph
+description: Make sure all proposed changes to your schema are safe
 ---
 
 Certain changes to your graph's schema (such as removing a field or type) might break one of your application's clients. GraphOS provides **schema checks** to help you identify breaking changes before you make them, and to help you identify when a potentially dangerous change _won't_ break anything.
@@ -14,7 +14,7 @@ You can review the results of schema checks inside Apollo Studio, helping you ma
   width="300"
 />
 
-> Schema checks are **free** as part of [all Apollo Studio plans](https://www.apollographql.com/plans/).
+Schema checks are **free** as part of [all Apollo plans](https://www.apollographql.com/plans/).
 
 ## Types of checks
 
@@ -36,9 +36,12 @@ To enable schema checks for your supergraph, do the following if you haven't yet
 
 1. Make sure you've published all of your subgraph schemas to GraphOS, and that those schemas are up to date.
     - [Learn how to publish schemas.](../schema/cli-registration/)
-2. Make sure your supergraph is reporting metrics to GraphOS. GraphOS uses these metrics to help determine when a type or field can be modified or removed safely.
-    - If you have a [cloud supergraph](../graphs/overview/#cloud-supergraphs), your router reports metrics automatically.
-   - [Setup for other graphs](../metrics/sending-operation-metrics/)
+2. Make sure your supergraph is sending operation metrics to GraphOS. GraphOS uses historical metrics to determine whether a potentially dangerous schema change is safe.
+
+    ⚠️ **If GraphOS has no operation metrics to compare against, all potentially dangerous schema changes result in a failed check!**
+
+   - If you have a [cloud supergraph](../graphs/overview/#cloud-supergraphs), your router reports metrics automatically.
+    - [Setup for other graphs](../metrics/sending-operation-metrics/)
 3. [Install the Rover CLI](/rover/getting-started/) in your development environment and [authenticate it with Apollo Studio](/rover/configuring/#authenticating-with-apollo-studio).
 
 ## Running your first check
@@ -71,7 +74,7 @@ Try changing something in the local version of your schema and see what happens!
 
 When you run `rover subgraph check`:
 
-1. GraphOS generates a diff between your local schema and the registered schema for the variant you're checking against.
+1. GraphOS generates a diff between your local schema and the published schema for the variant you're checking against.
 2. GraphOS uses this diff to determine whether the changes affect any operations that have been executed against your supergraph within a [customizable time window](./check-configurations/) (by default, this is the last seven days).
 3. GraphOS returns the diff, along with a list of the operations that are affected by the changes.
 4. Rover prints the result of the check and returns a non-zero exit code if at least one breaking change is found.
@@ -110,7 +113,7 @@ The output also includes a Studio URL that provides full details on the changes 
 
 ### Overriding flagged changes
 
-Occasionally, schema checks might flag a change that you know is safe. For example, you might change an input type's field from nullable to non-null when you are certain that none of your clients ever provides a null value for that field.
+Occasionally, schema checks might flag a change that you know is safe. For example, you might change an input type's field from nullable to non-null when you are certain that your clients _never_ provide a null value for that field.
 
 In cases like this, you can **override** a flagged change in Apollo Studio from the associated check's details page:
 
