--- a/src/content/graphos/index.mdx
+++ b/src/content/graphos/index.mdx
@@ -63,7 +63,7 @@ These additional features are available to organizations on an **Enterprise** pl
 
 In addition to the features above, an Enterprise plan provides access to our Graph Champions community and a dedicated support channel for your team to talk with Apollo supergraph experts. We'll work with you to customize a query volume limit and support package that's right for you.
 
-**If you're interested in an Enterprise plan,** please [contact us](https://www.apollographql.com/contact-sales/).
+**If you're interested in an Enterprise plan,** please [get in touch with us!](https://www.apollographql.com/contact-sales/)
 
 ---
 
