--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -24,7 +24,7 @@ Apollo offers the following plans to new organizations:
 
 > The Enterprise plan gives you access to all GraphOS enterprise features, our Graph Champions community, and a dedicated support channel for your team to talk with Apollo supergraph experts. We will work with you to customize a query volume limit and support package that's right for you.
 >
-> If you're interested in an Enterprise plan, please [contact us](https://www.apollographql.com/contact-sales/).
+> If you're interested in an Enterprise plan, please [get in touch with us!](https://www.apollographql.com/contact-sales/)
 
 ## Legacy plans
 
