--- a/src/content/graphos/quickstart/self-hosted.mdx
+++ b/src/content/graphos/quickstart/self-hosted.mdx
@@ -7,7 +7,7 @@ description: Host your enterprise router in your own infrastructure
 >
 > Self-hosted supergraphs are an enterprise-only feature for organizations with advanced performance or compliance requirements.
 >
-> If your organization might benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/). Please [contact us](https://www.apollographql.com/contact-sales/).
+> If your organization might benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
 
 This tutorial helps you get you up and running with GraphOS and a self-hosted supergraph. You can complete this tutorial even if your organization _doesn't_ currently have an Enterprise plan, enabling you to test out this functionality.
 
@@ -593,7 +593,7 @@ While we're here, execute some test queries against the supergraph! We'll look a
 
 Because our router is connected to GraphOS, it automatically collects and reports metrics on incoming operations. You can then visualize those metrics in Studio.
 
-Go to your variant's Operations page in Studio, which looks like this:
+Return to [Apollo Studio](https://studio.apollographql.com) and go to your supergraph variant's Operations page, which looks like this:
 
 <img
   src="../img/operations-quickstart.jpg"
