--- a/src/content/graphos/routing/self-hosted.mdx
+++ b/src/content/graphos/routing/self-hosted.mdx
@@ -7,7 +7,7 @@ description: Host your supergraph's router in your own infrastructure
 >
 > Self-hosted supergraphs are an enterprise-only feature for organizations with advanced performance or compliance requirements.
 >
-> If your organization might benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/). Please [contact us](https://www.apollographql.com/contact-sales/).
+> If your organization might benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
 
 Some organizations with advanced requirements need to host every part of their supergraph in their own infrastructure, _including_ the supergraph's router:
 
