fix: image path in graphos/delivery/contracts

--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -111,7 +111,7 @@ Open the Settings page for the variant you want to use as your source variant, t
 <img
   class="screenshot"
   alt="Edit supported directives in Studio"
-  src="./img/contract-variant-settings.jpg"
+  src="../img/contract-variant-settings.jpg"
   width="600"
 />
 
